--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="landing">
         <div class="container">
             <div class="text">
-                <h1>مرحبا, نحن شركة جولدن ارت </h1>
+                <h1>مرحبا, نحن شركة جولدن ارت ^_^ </h1>
                 <p>للأثاث المكتبى والتعليمى</p>
             </div>
             <div class="images">
