--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="landing">
         <div class="container">
             <div class="text">
-                <h1>مرحبا, نحن شركة جولدن ارت ^_^ </h1>
+                <h1>مرحبا, نحن شركة جولدن ارت ^_ ^ </h1>
                 <p>للأثاث المكتبى والتعليمى</p>
             </div>
             <div class="images">
@@ -105,7 +105,7 @@
                 <div class="content">
                     <h3>كرسى ماش طبى</h3>
                     <p>كرسى ماش طبى مستورد عالى الجودة, نجمة استالس, يد متحركة, ضهر شبك طبى عالى الجودة, مسند راس شبك متحرك,<span class="momo">ضمان سنة ضد عيوب الصناعة</span></p>
-                    <p><span class="mooo">السعر: 1900</span></p>
+                    <p><span class="mooo">السعر: 1900000</span></p>
                 </div>
                 <div class="info">
                     <a href="https://wa.me/qr/N4FOPSVKEKAQF1">whatsapp</a>
