--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="landing">
         <div class="container">
             <div class="text">
-                <h1>مرحبا, نحن شركة جولدن ارت ^_ ^ </h1>
+                <h1>مرحبا, نحن شركة جولدن ارت </h1>
                 <p>للأثاث المكتبى والتعليمى</p>
             </div>
             <div class="images">
@@ -69,7 +69,7 @@
                 <div class="content">
                     <h3>كرسى ماش طبى</h3>
                     <p>كرسى ماش طبى مستورد نجمه بلاستيك مضاضة للكسر, ضهر شبك طبى, قاعدة ماش ,يد ثابتة, <span class="momo">ضمان سنة ضد عيوب الصناعة</span></p>
-                    <p><span class="mooo">السعر: 850</span></p>
+                    <p><span class="mooo">السعر: 890</span></p>
                 </div>
                 <div class="info">
                     <a href="https://wa.me/qr/N4FOPSVKEKAQF1">whatsapp</a>
@@ -81,7 +81,7 @@
                 <div class="content">
                     <h3>كرسى ماش طبى يد منجدة</h3>
                     <p>كرسى ماش طبى مستورد نجمة استالس, يد منجدة عليها طبقة شبك طبى, ضهر شبك طبى عالى الجودة,<span class="momo">ضمان سنة ضد عيوب الصناعة</span></p>
-                    <p><span class="mooo">السعر: 1150</span></p>
+                    <p><span class="mooo">السعر: 1200</span></p>
                 </div>
                 <div class="info">
                     <a href="https://wa.me/qr/N4FOPSVKEKAQF1">whatsapp</a>
@@ -105,7 +105,7 @@
                 <div class="content">
                     <h3>كرسى ماش طبى</h3>
                     <p>كرسى ماش طبى مستورد عالى الجودة, نجمة استالس, يد متحركة, ضهر شبك طبى عالى الجودة, مسند راس شبك متحرك,<span class="momo">ضمان سنة ضد عيوب الصناعة</span></p>
-                    <p><span class="mooo">السعر: 1900000</span></p>
+                    <p><span class="mooo">السعر: 2800</span></p>
                 </div>
                 <div class="info">
                     <a href="https://wa.me/qr/N4FOPSVKEKAQF1">whatsapp</a>
@@ -117,7 +117,7 @@
                 <div class="content">
                     <h3>كرسى ماش طبى</h3>
                     <p>كرسى ماش طبى مستورد عالى الجودة, نجمة استالس, ضهر شبك طبى عالى الجودة, مسند راس شبك متحرك,<span class="momo">ضمان سنة ضد عيوب الصناعة</span></p>
-                    <p><span class="mooo">السعر: 1700</span></p>
+                    <p><span class="mooo">السعر: 2250</span></p>
                 </div>
                 <div class="info">
                     <a href="https://wa.me/qr/N4FOPSVKEKAQF1">whatsapp</a>
@@ -153,7 +153,7 @@
                 <div class="content">
                     <h3>كرسى ماش طبى</h3>
                     <p>كرسى ماش طبى مستورد نجمه استالس, ضهر شبك طبى, قاعدة ماش ,يد ثابتة, <span class="momo">ضمان سنة ضد عيوب الصناعة</span></p>
-                    <p><span class="mooo">السعر: 920</span></p>
+                    <p><span class="mooo">السعر: 990</span></p>
                 </div>
                 <div class="info">
                     <a href="https://wa.me/qr/N4FOPSVKEKAQF1">whatsapp</a>
